[package]
name = "test-rocket-rs"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono = { version = "0.4.23", features = ["serde"] }
rocket = { version = "0.5.0-rc.2", features = ["json"] }
serde = { version = "1.0.152", features = ["derive"] }

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

